plugins {
    id 'java'
}

compileJava {
    options.encoding = 'UTF-8'
    sourceCompatibility = '11'
    targetCompatibility = '11'
}

repositories {
    mavenCentral()
}

dependencies {
    testImplementation 'org.junit.jupiter:junit-jupiter:5.6.0'
}

test {
    useJUnitPlatform()
    testLogging {
        events "failed", "passed"
    }
}
